--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="io.github.ponnamkarthik.sample.MainActivity"
-    android:layout_margin="16dp">
+    android:fitsSystemWindows="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <io.github.ponnamkarthik.richlinkpreview.RichLinkView
-        android:id="@+id/richLinkView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-    </io.github.ponnamkarthik.richlinkpreview.RichLinkView>
+        <LinearLayout
+            android:animateLayoutChanges="true"
+            android:layout_margin="16dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</android.support.constraint.ConstraintLayout>
+            <io.github.ponnamkarthik.richlinkpreview.RichLinkView
+                android:id="@+id/richLinkView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </io.github.ponnamkarthik.richlinkpreview.RichLinkView>
+
+            <io.github.ponnamkarthik.richlinkpreview.RichLinkView
+                android:layout_marginTop="16dp"
+                android:id="@+id/richLinkView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </io.github.ponnamkarthik.richlinkpreview.RichLinkView>
+
+            <io.github.ponnamkarthik.richlinkpreview.RichLinkView
+                android:layout_marginTop="16dp"
+                android:id="@+id/richLinkView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </io.github.ponnamkarthik.richlinkpreview.RichLinkView>
+
+            <io.github.ponnamkarthik.richlinkpreview.RichLinkView
+                android:layout_marginTop="16dp"
+                android:id="@+id/richLinkView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </io.github.ponnamkarthik.richlinkpreview.RichLinkView>
+
+            <io.github.ponnamkarthik.richlinkpreview.RichLinkView
+                android:layout_marginTop="16dp"
+                android:id="@+id/richLinkView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </io.github.ponnamkarthik.richlinkpreview.RichLinkView>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
